[package]
edition = "2021"
name = "oxui"
version = "0.1.0"

[dependencies]
skia-safe = "0.47.0"
winit = "0.26.1"
skulpin = { version = "0.14", features = ["winit-app", "winit-latest"] }
log = "0.4"
typed-builder = "0.10.0"
downcast-rs = "1.2.0"
compose-rt = { git = "https://github.com/cksac/compose-rt" }

[dev-dependencies]
env_logger = "0.6"

# [profile.release]
# debug = true